change text of old password

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -50,7 +50,7 @@
       "fileSize": "サイズ（GB）"
     },
     "changePassword": {
-      "oldPassword": "以前のパスワード：　",
+      "oldPassword": "現在のパスワード：　",
       "changePassword": "パスワード変更"
     }
   }
