--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -53,5 +53,23 @@
       "oldPassword": "現在のパスワード：　",
       "changePassword": "パスワード変更"
     }
+  },
+  "errorMessages": {
+    "E0001": "{requireValue}を入力してください。",
+    "E0002": "{fromatValue}フォーマットが正しくありません。",
+    "E0003": "%0%は半角英数字8文字以上入力してください。",
+    "E0004": "%0%や%1%が不一致しています。",
+    "E0005": "メール又はパスワードが間違えています。",
+    "E0006": "入力された検証コードが間違えています。",
+    "E0007": "利用規約をチェックしてください。",
+    "E0008": "検証コードをまず入力してください。",
+    "E0009": "メールアドレスが間違えています。",
+    "E00010": "ユーザーが既に存在しています。",
+    "E00011": "ユーザーが登録されていません。",
+    "E00012": "パスワード試行やコード検証試行の回数が上限に達しました。",
+    "E00013": "検証コードの有効期限が切れてしまいました。再発行してください。",
+    "E00014": "検証コードが送信できません。システム管理者に問い合わせしてください。",
+    "E00015": "リクエスト回数が多すぎます。",
+    "E00016": "システムエラーが発生しました。システム管理者に問い合わせしてください。"
   }
 }
