画面デザイン、エラーメッセージ

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -32,7 +32,8 @@
     },
     "signup": {
       "userName": "アカウント名：　",
-      "confirmPassword": "パスワード確認：　"
+      "confirmPassword": "パスワード確認：　",
+      "alreadySignup": "すでにアカウントをお持ちですか？"
     },
     "confirmAccount": {
       "sentNewCodeLabel": "検証コードが届かない場合は、以下より再度送信してください。",
@@ -56,9 +57,9 @@
     }
   },
   "errorMessages": {
-    "E0001": "{requireValue}を入力してください。",
-    "E0002": "{fromatValue}フォーマットが正しくありません。",
-    "E0003": "%0%は半角英数字8文字以上入力してください。",
+    "E0001": "{input}を入力してください。",
+    "E0002": "{fromat}フォーマットが正しくありません。",
+    "E0003": "{length}は半角英数字8文字以上入力してください。",
     "E0004": "%0%や%1%が不一致しています。",
     "E0005": "メール又はパスワードが間違えています。",
     "E0006": "入力された検証コードが間違えています。",
