エラーメッセージ表示、ログインした画面Headerを共通にする

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -17,7 +17,8 @@
       "verificationCode": "検証コード：　",
       "accountName": "アカウント名：",
       "mfaOnOff": "多要素認証　",
-      "serviceConfirmMenu": "サービス利用規約確認"
+      "serviceConfirmMenu": "サービス利用規約確認",
+      "logout": "ログアウト"
     },
     "button": {
       "registerBtn": "登録",
@@ -57,9 +58,9 @@
     }
   },
   "errorMessages": {
-    "E0001": "{input}を入力してください。",
-    "E0002": "{fromat}フォーマットが正しくありません。",
-    "E0003": "{length}は半角英数字8文字以上入力してください。",
+    "E0001": "{param1}を入力してください。",
+    "E0002": "{param2}フォーマットが正しくありません。",
+    "E0003": "{param3}は半角英数字8文字以上入力してください。",
     "E0004": "%0%や%1%が不一致しています。",
     "E0005": "メール又はパスワードが間違えています。",
     "E0006": "入力された検証コードが間違えています。",
