check SignUp Form and Confrim code verification Form and delete messageStyle of alert.js

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -60,24 +60,32 @@
   "errorParams": {
     "email": "メール",
     "password": "パスワード",
-    "username": "アカウント名"
+    "username": "アカウント名",
+    "confirmPassword": "パスワード確認",
+    "verificationCode": "検証コード"
+  },
+  "successMessages": {
+    "S0001": "検証コードを再送信しました。"
   },
   "errorMessages": {
     "E0001": "{param1}を入力してください。",
     "E0002": "{param1}フォーマットが正しくありません。",
     "E0003": "{param1}は半角英数字8文字以上入力してください。",
-    "E0004": "%0%や%1%が不一致しています。",
+    "E0004": "{param1}や{param2}が不一致しています。",
     "E0005": "メール又はパスワードが間違えています。",
     "E0006": "入力された検証コードが間違えています。",
     "E0007": "利用規約をチェックしてください。",
     "E0008": "検証コードをまず入力してください。",
     "E0009": "メールアドレスが間違えています。",
-    "E00010": "ユーザーが既に存在しています。",
-    "E00011": "ユーザーが登録されていません。",
-    "E00012": "パスワード試行やコード検証試行の回数が上限に達しました。",
-    "E00013": "検証コードの有効期限が切れてしまいました。再発行してください。",
-    "E00014": "検証コードが送信できません。システム管理者に問い合わせしてください。",
-    "E00015": "リクエスト回数が多すぎます。",
-    "E00016": "システムエラーが発生しました。システム管理者に問い合わせしてください。"
+    "E0010": "ユーザーが既に存在しています。",
+    "E0011": "ユーザーが登録されていません。",
+    "E0012": "パスワード試行やコード検証試行の回数が上限に達しました。",
+    "E0013": "検証コードの有効期限が切れてしまいました。再発行してください。",
+    "E0014": "検証コードが送信できません。システム管理者に問い合わせしてください。",
+    "E0015": "リクエスト回数が多すぎます。",
+    "E0016": "システムエラーが発生しました。システム管理者に問い合わせしてください。",
+    "E0017": "{param1}の成功メールが送信できませんでした。",
+    "E0018": "{param1}処理が完了しました。",
+    "E0019": "「利用規約」ボタンをクリックし、内容を確認してください。"
   }
 }
