signin and totp form

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -62,7 +62,8 @@
     "password": "パスワード",
     "username": "アカウント名",
     "confirmPassword": "パスワード確認",
-    "verificationCode": "検証コード"
+    "verificationCode": "検証コード",
+    "totpCode": "ワンタイムパスワード"
   },
   "successMessages": {
     "S0001": "検証コードを再送信しました。"
