登録画面の連続ボタン対応

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -75,7 +75,7 @@
     "totpCode": "ワンタイムパスワード"
   },
   "successMessages": {
-    "S0001": "検証コードを再送信しました。"
+    "I0001": "検証コードを再送信しました。"
   },
   "errorMessages": {
     "E0001": "{param1}を入力してください。",
