form validation param

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -72,7 +72,10 @@
     "username": "アカウント名",
     "confirmPassword": "パスワード確認",
     "verificationCode": "検証コード",
-    "totpCode": "ワンタイムパスワード"
+    "totpCode": "ワンタイムパスワード",
+    "currentPassword": "現在のパスワード",
+    "newPassword": "新しいパスワード",
+    "confirmNewPassword": "新しいパスワード確認"
   },
   "successMessages": {
     "I0001": "検証コードを再送信しました。"
