--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -68,6 +68,7 @@
   },
   "errorParams": {
     "email": "メール",
+    "mailAddress": "メールアドレス",
     "password": "パスワード",
     "username": "アカウント名",
     "confirmPassword": "パスワード確認",
@@ -75,17 +76,20 @@
     "totpCode": "ワンタイムパスワード",
     "currentPassword": "現在のパスワード",
     "newPassword": "新しいパスワード",
-    "confirmNewPassword": "新しいパスワード確認"
+    "confirmNewPassword": "新しいパスワード確認",
+    "changePassword": "パスワード変更",
+    "mailAndPass": "メール又はパスワード"
   },
   "successMessages": {
-    "I0001": "検証コードを再送信しました。"
+    "I0001": "検証コードを再送信しました。",
+    "I0002": "{param1}処理が完了しました。"
   },
   "errorMessages": {
     "E0001": "{param1}を入力してください。",
     "E0002": "{param1}フォーマットが正しくありません。",
     "E0003": "{param1}は半角英数字8文字以上入力してください。",
     "E0004": "{param1}や{param2}が不一致しています。",
-    "E0005": "メール又はパスワードが間違えています。",
+    "E0005": "{param1}が間違えています。",
     "E0006": "入力された検証コードが間違えています。",
     "E0007": "利用規約をチェックしてください。",
     "E0008": "検証コードをまず入力してください。",
@@ -98,7 +102,6 @@
     "E0015": "リクエスト回数が多すぎます。",
     "E0016": "システムエラーが発生しました。システム管理者に問い合わせしてください。",
     "E0017": "{param1}の成功メールが送信できませんでした。",
-    "E0018": "{param1}処理が完了しました。",
-    "E0019": "「利用規約」ボタンをクリックし、内容を確認してください。"
+    "E0018": "「利用規約」ボタンをクリックし、内容を確認してください。"
   }
 }
