gamen design and change password sent mail

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -3,10 +3,10 @@
     "common": {
       "title": "撮影データ変換サービス",
       "register": "アカウント登録",
-      "email": "メール：　",
-      "password": "パスワード：　",
+      "email": "メール:",
+      "password": "パスワード:",
       "verificationCode": "検証コード：　",
-      "accountName": "アカウント名：",
+      "accountName": "アカウント名:",
       "mfaOnOff": "多要素認証　",
       "serviceConfirmMenu": "サービス利用規約確認",
       "logout": "ログアウト"
@@ -26,8 +26,8 @@
       "sendBtn": "送信"
     },
     "signup": {
-      "userName": "アカウント名：　",
-      "confirmPassword": "パスワード確認：　",
+      "userName": "アカウント名:",
+      "confirmPassword": "パスワード確認:",
       "alreadySignup": "すでにアカウントをお持ちですか？"
     },
     "confirmAccount": {
@@ -100,6 +100,7 @@
     "E0015": "リクエスト回数が多すぎます。",
     "E0016": "システムエラーが発生しました。システム管理者に問い合わせしてください。",
     "E0017": "{param1}の成功メールが送信できませんでした。",
-    "E0018": "「利用規約」ボタンをクリックし、内容を確認してください。"
+    "E0018": "「利用規約」ボタンをクリックし、内容を確認してください。",
+    "E0019": "パスワード変更処理の成功メールが送信できませんでした。"
   }
 }
