--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -5,7 +5,7 @@
       "register": "アカウント登録",
       "email": "メール:",
       "password": "パスワード:",
-      "verificationCode": "検証コード：　",
+      "verificationCode": "検証コード:",
       "accountName": "アカウント名:",
       "mfaOnOff": "多要素認証　",
       "serviceConfirmMenu": "サービス利用規約確認",
@@ -36,11 +36,11 @@
     },
     "signin": {
       "resetPassword": "パスワードリセット",
-      "onetimePassword": "ワンタイムパスワード："
+      "onetimePassword": "ワンタイムパスワード:"
     },
     "passwordReset": {
-      "newPassword": "新しいパスワード：　",
-      "confirmNewPassword": "新しいパスワード確認：　"
+      "newPassword": "新しいパスワード:",
+      "confirmNewPassword": "新しいパスワード確認:"
     },
     "fileUpload": {
       "fileName": "フォルダ名",
