テスト仕様書によって、ログイン画面の調整する

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -36,7 +36,8 @@
     },
     "signin": {
       "resetPassword": "パスワードリセット",
-      "onetimePassword": "ワンタイムパスワード:"
+      "onetimePassword": "ワンタイムパスワード:",
+      "onlyDigit": "半角数字のみ"
     },
     "passwordReset": {
       "newPassword": "新しいパスワード:",
