コード整理

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -60,7 +60,7 @@
       "oldPassword": "現在のパスワード:",
       "changePassword": "パスワード変更"
     },
-    "totpForm": {
+    "totp": {
       "title": "Authy, Microsoft Authenticator 又は Google Authenticatorを利用して、QAコードをスキャンします。",
       "mfaCode": "MFAコード",
       "enableMultiFactorAuth": "多要素認証の有効設定"
@@ -82,7 +82,9 @@
   },
   "successMessages": {
     "I0001": "検証コードを再送信しました。",
-    "I0002": "{param1}処理が完了しました。"
+    "I0002": "{param1}処理が完了しました。",
+    "I0003": "圧縮中",
+    "I0004": "ファイル読み込み中"
   },
   "errorMessages": {
     "E0001": "{param1}を入力してください。",
@@ -103,6 +105,7 @@
     "E0016": "システムエラーが発生しました。システム管理者に問い合わせしてください。",
     "E0017": "{param1}の成功メールが送信できませんでした。",
     "E0018": "「利用規約」ボタンをクリックし、内容を確認してください。",
-    "E0019": "パスワード変更処理の成功メールが送信できませんでした。"
+    "E0019": "パスワード変更処理の成功メールが送信できませんでした。",
+    "E0020": "対象アップロードJPEGファイルがありません。"
   }
 }
