--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -3,7 +3,7 @@
     "common": {
       "title": "撮影データ変換サービス",
       "register": "アカウント登録",
-      "email": "メール:",
+      "email": "メールアドレス:",
       "password": "パスワード:",
       "verificationCode": "検証コード:",
       "accountName": "アカウント名:",
@@ -67,7 +67,7 @@
     }
   },
   "errorParams": {
-    "email": "メール",
+    "email": "メールアドレス",
     "mailAddress": "メールアドレス",
     "password": "パスワード",
     "username": "アカウント名",
@@ -78,7 +78,7 @@
     "newPassword": "新しいパスワード",
     "confirmNewPassword": "新しいパスワード確認",
     "changePassword": "パスワード変更",
-    "mailAndPass": "メール又はパスワード"
+    "mailAndPass": "メールアドレス又はパスワード"
   },
   "successMessages": {
     "I0001": "検証コードを再送信しました。",
@@ -106,7 +106,9 @@
     "E0017": "{param1}の成功メールが送信できませんでした。",
     "E0018": "「利用規約」ボタンをクリックし、内容を確認してください。",
     "E0019": "パスワード変更処理の成功メールが送信できませんでした。",
-    "E0020": "対象アップロードJPEGファイルがありません。"
+    "E0020": "アップロード対象のJPEGファイルが入っていません。",
+    "E0021": "バケットが作成できませんでした。",
+    "E0022": "ユーザーが無効になっています。"
   },
   "conditions": " 今回は利用規約の概要や、利用規約を作成する場合の留意点などについて解説しました。最近はWebやアプリでさまざまなサービスが提供されるようになり、それに伴って利用規約の内容も多岐にわたるようになりました。\n  利用規約はサービスの内容に即して作成する必要があるため、利用規約を作成するうえでの基本的な留意点を押さえた上で、提供するサービスに合った内容にしなければなりません。\n この記事で紹介した利用規約の概要と留意点を参考に、サービスに応じた内容を加味して利用規約を作成してみてください。ただし、定型約款に該当する利用規約の場合には、利用者の同意を得ずに利用規約を変更したい場合には、民法548条の4に定める内容の変更しかできないため、必要に応じて弁護士等専門家の意見を聞きながら利用規約を作成することをお薦めします。"
 }
