エラーメッセージコメント修正

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -93,9 +93,9 @@
     "E0004": "{param1}や{param2}が不一致しています。",
     "E0005": "{param1}が間違えています。",
     "E0006": "入力された検証コードが間違えています。",
-    "E0007": "利用規約をチェックしてください。",
+    "E0007": "ユーザーが無効になっています。",
     "E0008": "検証コードをまず入力してください。",
-    "E0009": "メールアドレスが間違えています。",
+    "E0009": "バケットが作成できませんでした。",
     "E0010": "ユーザーが既に存在しています。",
     "E0011": "ユーザーが登録されていません。",
     "E0012": "パスワード試行やコード検証試行の回数が上限に達しました。",
@@ -106,9 +106,7 @@
     "E0017": "{param1}の成功メールが送信できませんでした。",
     "E0018": "「利用規約」ボタンをクリックし、内容を確認してください。",
     "E0019": "パスワード変更処理の成功メールが送信できませんでした。",
-    "E0020": "アップロード対象のJPEGファイルが入っていません。",
-    "E0021": "バケットが作成できませんでした。",
-    "E0022": "ユーザーが無効になっています。"
+    "E0020": "アップロード対象のJPEGファイルが入っていません。"
   },
   "conditions": " 今回は利用規約の概要や、利用規約を作成する場合の留意点などについて解説しました。最近はWebやアプリでさまざまなサービスが提供されるようになり、それに伴って利用規約の内容も多岐にわたるようになりました。\n  利用規約はサービスの内容に即して作成する必要があるため、利用規約を作成するうえでの基本的な留意点を押さえた上で、提供するサービスに合った内容にしなければなりません。\n この記事で紹介した利用規約の概要と留意点を参考に、サービスに応じた内容を加味して利用規約を作成してみてください。ただし、定型約款に該当する利用規約の場合には、利用者の同意を得ずに利用規約を変更したい場合には、民法548条の4に定める内容の変更しかできないため、必要に応じて弁護士等専門家の意見を聞きながら利用規約を作成することをお薦めします。"
 }
