コメント追加

--- a/formatconv/src/locales/jp.json
+++ b/formatconv/src/locales/jp.json
@@ -99,10 +99,9 @@
     "E0014": "検証コードが送信できません。システム管理者に問い合わせしてください。",
     "E0015": "リクエスト回数が多すぎます。",
     "E0016": "システムエラーが発生しました。システム管理者に問い合わせしてください。",
-    "E0017": "{param1}の成功メールが送信できませんでした。",
+    "E0017": "アップロード対象のJPEGファイルが入っていません。",
     "E0018": "「利用規約」ボタンをクリックし、内容を確認してください。",
-    "E0019": "パスワード変更処理の成功メールが送信できませんでした。",
-    "E0020": "アップロード対象のJPEGファイルが入っていません。"
+    "E0019": "パスワード変更処理の成功メールが送信できませんでした。"
   },
   "conditions": " 今回は利用規約の概要や、利用規約を作成する場合の留意点などについて解説しました。最近はWebやアプリでさまざまなサービスが提供されるようになり、それに伴って利用規約の内容も多岐にわたるようになりました。\n  利用規約はサービスの内容に即して作成する必要があるため、利用規約を作成するうえでの基本的な留意点を押さえた上で、提供するサービスに合った内容にしなければなりません。\n この記事で紹介した利用規約の概要と留意点を参考に、サービスに応じた内容を加味して利用規約を作成してみてください。ただし、定型約款に該当する利用規約の場合には、利用者の同意を得ずに利用規約を変更したい場合には、民法548条の4に定める内容の変更しかできないため、必要に応じて弁護士等専門家の意見を聞きながら利用規約を作成することをお薦めします。"
 }
